Fix foldable overflow

--- a/src/assets/styles/components/foldable.scss
+++ b/src/assets/styles/components/foldable.scss
@@ -59,7 +59,13 @@
     }
 
     .foldable__description {
-      max-height: 200px;
+      animation: delay-overflow 0.6s;
+      max-height: 400px;
+      overflow-y: auto;
     }
+  }
+
+  @keyframes delay-overflow {
+    from { overflow-y: hidden; }
   }
 }
